After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 359171 - download files with same name -> extension mangled on duplicates
download files with same name -> extension mangled on duplicates
Status: RESOLVED FIXED
Product: Pan
Classification: Other
Component: general
pre-1.0 betas
Other Mac OS
: Normal minor
: 1.0
Assigned To: Charles Kerr
Pan QA Team
Depends on:
Blocks:
 
 
Reported: 2006-10-03 01:06 UTC by Jerry Segers, Jr.
Modified: 2006-10-03 15:34 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
recreates duplicate file naming as in 0.14.2 (1.20 KB, patch)
2006-10-03 01:08 UTC, Jerry Segers, Jr.
none Details | Review

Description Jerry Segers, Jr. 2006-10-03 01:06:09 UTC
Repeatable: always
steps to repeat: download a binary twice
expected result: somefile.foo and somefile_copy_2.foo as in pan 0.14.2
actual result: somefile.foo and somefile.foo-1

This breaks programs that depend on the extension (mac os x finder preview, gqview) and it loses me the ability to "rm -f *_copy_*"

Patch will be attached as soon as bugzilla lets me.

/me may be a one trick pony, but when my trick comes up, I'm all over it! ;-)
Comment 1 Jerry Segers, Jr. 2006-10-03 01:08:12 UTC
Created attachment 73910 [details] [review]
recreates duplicate file naming as in 0.14.2
Comment 2 Charles Kerr 2006-10-03 15:34:29 UTC
Thanks, Jerry!