Accepted Jerry Segers' patch for better handling of dupliate saved filenames. http://bugzilla.gnome.org/show_bug.cgi?id=359171